Fixed raw data overflow issue

--- a/dove-ui/src/app/app.component.scss
+++ b/dove-ui/src/app/app.component.scss
@@ -32,10 +32,6 @@
         grid-area: raw-data;
         position: relative;
     }
-
-    .view {
-        border: 2px solid #000000;
-    }
 }
 
 .slider-bar {
